[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "nascar-api"
version = "0.0.1"
authors = [
  { name="Tanner Yohe", email="tanneryohe95@gmail.com" },
]
description = "Package containing tools to read and manipulate NASCAR data via the CF API."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [

]
license = {text = "GPL-3.0-or-later"}

[project.urls]
Homepage = "https://github.com/TannerYohe/nascar-api"
Issues = "https://github.com/TannerYohe/nascar-api/issues"