[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "nascar-api"
authors = [
  { name="Tanner Yohe", email="tanneryohe95@gmail.com" },
]
description = "Package containing tools to read and manipulate NASCAR data via the CF API."
readme = "README.md"
requires-python = ">=3.11, <4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "MIT"}
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/TannerYohe/nascar-api"
Issues = "https://github.com/TannerYohe/nascar-api/issues"


[tool.poetry]
version = "0.1.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.7"
polyfactory = "^2.22.1"
ty = "^0.0.1a16"
types-requests = "^2.32.4.20250611"
requests-mock = "^1.12.1"
pytest-cov = "^6.2.1"
python-semantic-release = "^10.2.0"


[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"


[tool.ruff]
exclude = [".git", "__pycache__", "build", "dist", "site-packages"]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "C", "D", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.pytest.ini_options]
log_cli_level = "DEBUG"
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"
addopts = [
    "--cov=nascar_api",
    "--cov-report=html"
]


[tool.ty.src]
include = ["src"]


[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]